Hadouken/style.css
*{
	box-sizing: border-box;
}

body{
	border: 0;
}

.container{
	height: 400px;

	margin-top: 10%;
	position: absolute;
	margin: auto;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.row{
	height: 200px;
	width: 80%;
	position: absolute;
	margin: auto;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

.demo-hadouken{
	vertical-align: top;
	margin-top: 55px;
	margin-left: -55px;

}

